# MeanDeviation-Web

./: .env.example  .gitignore  README.md  app.py  fetch_history.py  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh
skills/: 01_market_phase_framework.md  02_position_management.md  03_entry_exit_signals.md  04_sector_rotation.md  05_volume_price_analysis.md  06_intraday_trading.md  07_risk_management.md  08_market_participants.md  09_long_term_positions.md  10_mindset_discipline.md  11_stock_type_playbook.md  README.md  agent_prompt_template.md
templates/: index.html
